@@ -1,0 +1,52 @@
+# Possible Targets:	all clean Debug cleanDebug Release cleanRelease
+
+##############################################################################################
+# Settings
+#
+
+# General settings
+	# See $(GFXLIB)/tools/gmake_scripts/readme.txt for the list of variables
+	OPT_OS					= freebsd
+	OPT_LINK_OPTIMIZE		= yes
+	# Change this next setting (or add the explicit compiler flags) if you are not compiling for x86 linux
+	OPT_CPU					= x64
+
+# uGFX settings
+	# See $(GFXLIB)/tools/gmake_scripts/library_ugfx.mk for the list of variables
+	GFXLIB					= ../uGFX
+	GFXBOARD				= FreeBSD-SDL
+	GFXDEMO					= modules/gdisp/basics
+
+# Linux settings
+	# See $(GFXLIB)/tools/gmake_scripts/os_linux.mk for the list of variables
+
+##############################################################################################
+# Set these for your project
+#
+
+ARCH     =
+XCC      = gcc10
+XAS      = gcc10
+XLD      = gcc10
+SRCFLAGS = -ggdb -O0
+CFLAGS   = `sdl2-config --libs --cflags`
+CXXFLAGS =
+ASFLAGS  =
+LDFLAGS  =
+
+SRC      =
+OBJS     =
+DEFS     =
+LIBS     =
+INCPATH  =
+LIBPATH  =
+
+##############################################################################################
+# These should be at the end
+#
+
+include $(GFXLIB)/tools/gmake_scripts/library_ugfx.mk
+include $(GFXLIB)/tools/gmake_scripts/os_$(OPT_OS).mk
+include $(GFXLIB)/tools/gmake_scripts/compiler_gcc.mk
+# *** EOF ***
+
