@@ -1,0 +1,16 @@
+#
+# This file is subject to the terms of the GFX License. If a copy of
+# the license was not distributed with this file, you can obtain one at:
+#
+#             http://ugfx.io/license.html
+#
+
+# See readme.txt for the make API
+
+# Requirements:
+#
+# NONE
+#
+
+LDFLAGS += -pthread
+
